--- a/ProyectoFinalOut/ProyectoFinalOut/Ruta10.resx
+++ b/ProyectoFinalOut/ProyectoFinalOut/Ruta10.resx
@@ -692,7 +692,7 @@
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAZAAAADhCAYAAADmtuMcAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAZgRJREFUeF7t3Qe8XFW99/+/z+v+n+der89VAQuKiKKAgg3pICi9iSAg0qSFJiBS
+        wgAADsIBFShKgAAAZgRJREFUeF7t3Qe8XFW99/+/z+v+n+der89VAQuKiKKAgg3pICi9iSAg0qSFJiBS
         pKNUpRPSSUgl9aQBIRASWoAQejf03kJvIT1Zz/7ssA57fvOds+eszJ49M2fn9fq9zmTKrmuv9151/38j
         R450xKhRo0pi9OjRZTFmzJiyaGtrK4uxY8e2x7hx48pi/PjxZTFhwoSSmDhxYllcc801JXHttdeWxHXX
         XVcWkyZNKovrr7++JCZPnlwSN9xwQ1nceOONZTFlypSSuOmmm8pi6tSpJTFt2rSyuPnmm0villtuKYtb
@@ -1550,7 +1550,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAZAAAADhCAYAAADmtuMcAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAawZJREFUeF7t3Qe4VNW9///f87vP/7bfvenFxBSjuSaWdLtGb2xJbLGk2aNiixp7
+        wgAADsIBFShKgAAAawZJREFUeF7t3Qe4VNW9///f87vP/7bfvenFxBSjuSaWdLtGb2xJbLGk2aNiixp7
         1yTGXhFQAZGmCEpHOkhTiiKKLShiA5WiNOl9/fd74zru+c5nzpyzzuzZM3OG5/k+5zAzZ88ua6/X6vv/
         9O7d2xF9+vTJicceeywvHn/88bzo27dvXvTr168h+vfvnxcDBgzIi4EDB+bEoEGD8mLw4ME5MWTIkJx4
         4okn8mLo0KF5MWzYsJwYPnx4TowYMSIvRo4cmRejRo3KidGjR+fFmDFjcmLs2LF58eSTT+bEuHHj8mL8
@@ -2008,6 +2008,32 @@
         VDogCpGyAaIQqXRAFCIhgChE6oA0DxCLRyggFo9QQCweaQKiEEkLEItHKCAKkWJ4KEAUIlkCYvEIBcTi
         oQBRiGQJiMWjDkgdkKoBRCESAohCJAQQhUhrAUQhEgKIQqQYHlkDohBJCxCLR+0D4tz/DxX0aAM6d6Wq
         AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnVerMapa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        5wAAAOcB8BtYtQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASeSURBVFhH3Zdr
+        TBxVFMfXxISkiQ9aPvhI01rdOzP7mp2d3ZldWLawQHnESKUaWlMEpSZISoGKMW0By1M0qVaUCoHGxDZU
+        q1ZT8JtpGr+ZaqHaRLEx9YN+aE3VApo0Vv+eO+wOO9mHQCRNvMkve3buuff879k75961/W+byFhtQGBX
+        JTu7qQnsCv8e61r9RsF264zdHHMznAt58V6ugoAo/sEYa4y5rG5TBXZtzMXQ6RehOBi6gm6cDPvgEdhP
+        MZfVbZT2v854GLwU/Mxra+Bz2nEhqkFkwp8xl9VtQYH9eNTJcFB3GRnopAx8EFahCMJMzGV1m8Mutj0p
+        CX9/lefFpWLdoFZ2zUuC0BxzWWx2yXXDbmf4r5GZgI+9Ii4V6ThbEICLvif5Cey6jRvOZ0+jsHcW0b55
+        o2N+0mbA7dAnFSnJ5Ce8vxUbayPYIQm4mK9gh88N356gxYfDx5kCCnp+SRKw6/mVCdAnK7Bu9DF4XRK6
+        XSI8igPBj8osPhyLgEjX1SQBA8fsUPaFDbTjJUmD0wngSB9W4p7WUqPPfzA/qZ/D+0wBee2XLQLOHl4D
+        WWTYRbv4GVqFyynA/3qhZXAmAZwHTlTB103BKSOp+i0CtBe+tgh4WN+EXgpeTJ9bgptwOKjAF3ZZBicK
+        kPeGlo1FgNLymUUAX/1+iaH10fXYU7ke/QEZTqeYUsBwWzb6G3KWjUWAs3EChT2/mhNXRzZigDJQ5JBQ
+        4BAxqMtQS+SUAlaKVQAR2j9jTnyq5w5UkIDpkIzvqJCU+hxQ+zanFPD2vrvxRuvaZZMkQG761Jx4dsKG
+        SEDAIdp8wyEF3jz6/SfLUwrgttygL5skAZzEidvftEOjYhKgn8A/FDWDcxo7Fv2autLXi0ykF0Cr5xPv
+        fpEmrlERrPEvDqQsqH0RlEQFaG6qE3TSlRbRK9qf/nVLR1oBc+OLqbUMOk3Bt/pQpjhxnC4ZU3TEXqRa
+        /26eurBHKhWEJhL8/4W0AmaP2DB3KlmAv05DbcCNmdgJd0Bzo53gNn/G+/xPByxjMpFewBAJGLYK0Me3
+        wOsWcb5QMwJO0+pVSj+H2/FnMvnoJ0otgdJhChDLW03iAjjc9rTkQhsrhq8nH/X6wmo5L1FdaHn8PjQT
+        A7rHfF5HWVB7I4aIVNUvEVNA3xM5Jm/VZ5sCuN23MwfTI1kY2puNA/6FQN8SYbpyfTGchanRLOTS5fMb
+        2gu8ryPgwZHnsvHD+O14uTF1BYxjCogHTMfciA0nO+5Ek+YwgvC6EFYfxLbCDQbc5s94X0NAMopY/BXN
+        hClgsG5tRs53Z+Hnwdtw4akNxg2nTKbaQHe+ITqgONwup2df0h7QKRuXafU8M6mqXyKmgPtr8jOybqAS
+        dx3dDvehKrzilfCq6jE3I4fbQ0EvqhUV+iOdxqGW3zYFtao/I6YAPvmSGNsOT9SHclHAqCziczonzhX4
+        8U6uD0UeBVpRPaI9vxkClsLyBXDGqnFvM92O6Kh2C/QaSnb4SZCycwS57d/TzeoKNndfQ7T3esqgiaxM
+        QAw+Lr5JuZ1YS5aKIeAhh/g7N24JDteN2L+DW9Vstn8A95NUwnEyXgIAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
